Wed Jun 18 22:24:46 2008  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* array.c (ary_new, rb_ary_initialize, rb_ary_store,
	  rb_ary_aplice, rb_ary_times): integer overflows should be
	  checked. based on patches from Drew Yao <ayao at apple.com>
	  fixed CVE-2008-2726

	* string.c (rb_str_buf_append): fixed unsafe use of alloca,
	  which led memory corruption. based on a patch from Drew Yao
	  <ayao at apple.com> fixed CVE-2008-2726

	* sprintf.c (rb_str_format): backported from trunk.

	* intern.h: ditto.

Tue Jun 17 15:09:46 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): no need to expand root path which has no
	  short file name.  [ruby-dev:35095]

Sun Jun 15 19:27:40 2008  Akinori MUSHA  <knu@iDaemons.org>

	* configure.in: Fix $LOAD_PATH.  Properly expand vendor_ruby
	  directories; submitted by Takahiro Kambe <taca at
	  back-street.net> in [ruby-dev:35099].

Mon Jun  9 17:56:30 2008  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (Set#delete_if): Call to_a.
	  (SortedSet#delete_if, TC_SortedSet#test_sortedset): Use super to
	  yield elements in sorted order; [ruby-core:17144] by Arthur
	  Schreiber.
	  (SortedSet#each, SortedSet#each, TC_Set#test_each)
	  (TC_SortedSet#test_sortedset): Return self; [ruby-dev:35002] by
	  Arthur Schreiber.

Mon Jun  9 03:28:05 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ext/zlib/zlib.c (rb_deflate_initialize, Init_zlib): Fix up
	  initialize_copy; [ruby-list:45016], [ruby-list:45018].

Mon Jun  9 03:26:03 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* NEWS: Mention new constants.

Mon Jun  9 03:24:18 2008  Tanaka Akira  <akr@fsij.org>

	* hash.c (hash_i): make Hash#hash order insensitive.

Mon Jun  9 03:22:43 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (VENDOR_DIR): use LIBDIR instead of PREFIX as well as
	  SITE_DIR.  a patch from Richard Brown <rbrown AT exherbo.org> in
	  [ruby-core:17129].

Mon Jun  9 03:21:20 2008  Tanaka Akira  <akr@fsij.org>
